# dev-trends

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
dashboard/: app.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/activity/: _activity__models.yml  fact_github_activity.sql
dbt/models/marts/core/: _core__models.yml  dim_date.sql
dbt/models/staging/: _staging__models.yml  stg_github_events.sql
dbt/seeds/: _seeds.yml  dim_event_type.csv  dim_source.csv  dim_technology.csv
docker/: docker-compose.yml
infra/: athena.tf  budget.tf  example.tfvars  glue.tf  iam.tf  outputs.tf  providers.tf  s3.tf  variables.tf  versions.tf
scripts/: athena_register_gold.sh
src/dev_trends/: spark_session.py
src/dev_trends/aggregate/: gold.py
src/dev_trends/dashboard/: query.py
src/dev_trends/ingestion/: gharchive.py  kafka_source.py  producer.py
src/dev_trends/pipeline/: batch.py  streaming.py
src/dev_trends/storage/: bronze.py  silver.py
src/dev_trends/transform/: normalize.py  technologies.py
tests/: conftest.py  test_seed_technology_sync.py  test_smoke.py
tests/aggregate/: test_gold.py
tests/dashboard/: test_query.py
tests/ingestion/: test_gharchive.py  test_producer.py
tests/storage/: test_bronze.py  test_silver.py
tests/transform/: test_normalize.py  test_technologies.py
