[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-trends"
version = "0.1.0"
description = "Pipeline de Data Engineering que mide la actividad de desarrollo de tecnologías a partir de GH Archive."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "AaronPrado", email = "aaronpradodarriba@gmail.com" }]
dependencies = [
  "pyspark>=3.5,<3.6",
  "delta-spark>=3.2,<3.3",
  "confluent-kafka>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "PT", "RUF"]
ignore = ["N812"]

[tool.ruff.lint.isort]
known-first-party = ["dev_trends"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports de paquete: no son imports sin usar

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
